add searchbar text

--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
     <div class="logo">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     </div>
+    <div class="searchbar">
+        This is where the searchbar should go.
+    </div>
 </body>
